lsp/tests/snapshots/format__snapshot_lower_and_title.snap
---
source: lsp/tests/format.rs
expression: "format!(\"{lower}\\n----- title -----\\n{title}\")"
---
\* Problem: everything *\
\ leading comment

maximize multi-objectives
  Cost: Priority = 2 Weight = -1 3 x + 2 y \ trailing
    - [ x ^ 2 + 4 x * y ] / 2
  Time: 2 x

subject to:
  c1: x + y <= 10 \ cap
  c2: -x \* inline *\ + 2 y >= -4
  \ own-line comment

  r1: -3 <= x - y <= 8
  ind: b = 1 -> x + y <= 3
  q1: x + [ x ^ 2 + y ^ 2 ] <= 4
  10 >= x
lazy constraints
  l1: x + y <= 20
user cuts
  u1: x-y >= -20
general constraints
  gm: r = MAX ( x , y , -3 )
bounds
  x <= inf
  -inf <= y <= 5
  z free
generals
  g1
  g2
binaries
  b
semi-continuous
  s1
sos
  s1: s1::
    x: 1
    y: 2
  s2: s2::
    z: 1.5
end
\ after end

----- title -----
\* Problem: everything *\
\ leading comment

Maximize Multi-Objectives
  Cost: Priority = 2 Weight = -1 3 x + 2 y \ trailing
    - [ x ^ 2 + 4 x * y ] / 2
  Time: 2 x

Subject To:
  c1: x + y <= 10 \ cap
  c2: -x \* inline *\ + 2 y >= -4
  \ own-line comment

  r1: -3 <= x - y <= 8
  ind: b = 1 -> x + y <= 3
  q1: x + [ x ^ 2 + y ^ 2 ] <= 4
  10 >= x
Lazy Constraints
  l1: x + y <= 20
User Cuts
  u1: x-y >= -20
General Constraints
  gm: r = MAX ( x , y , -3 )
Bounds
  x <= Inf
  -Inf <= y <= 5
  z Free
Generals
  g1
  g2
Binaries
  b
Semi-Continuous
  s1
Sos
  s1: S1::
    x: 1
    y: 2
  s2: S2::
    z: 1.5
End
\ after end
